--- a/frr/frr.conf
+++ b/frr/frr.conf
@@ -3,7 +3,12 @@ frr defaults traditional
 hostname router
 !
 interface eth1
+ ip address 172.16.0.5/24
+ no shutdown
+!
+interface eth1
  ip address 172.16.10.10/24
+ no shutdown
 !
 line vty
 !
